# bg3se-macos

./: .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md  setup.sh
BG3Extender/Extender/: ScriptExtender.cpp
BG3Extender/Extender/Client/: ScriptExtenderClient.cpp  ScriptExtenderClient.h
BG3Extender/Extender/Shared/: ExtenderNet.h  Hooks.cpp  Hooks.h  ScriptHelpers.cpp  Utils.cpp  Utils.h  VirtualTextures.h  VirtualTextures.inl
BG3Extender/GameHooks/: BinaryMappings.xml
SetupScripts/: bg3se_mac.h  bg3se_macos.cpp  main.cpp  setup_ghidra.sh
